third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/parser/control_exp_associativity_field_access.exp
module 0x42::M {
    struct S has copy, drop {
        f: u64,
    }
    fun t(cond: bool, s1: S, s2: S) {
        let _t4;
        let _t3;
        if (!cond) *&(&s2).f;
        if (cond) *&(&s1).f else *&(&s2).f;
        if (cond) _t3 = s1 else _t3 = s2;
        *&(&_t3).f;
        if (cond) _t4 = s1 else _t4 = s2;
        *&(&_t4).f;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: expected expression with no value but found `u64`
  ┌─ control_exp_associativity_field_access.move:8:9
  │
8 │         if (!cond) *&(&s2).f;
  │         ^^^^^^^^^^^^^^^^^^^^
